--- a/src/main/webapp/i18n/es/accountTypes.json
+++ b/src/main/webapp/i18n/es/accountTypes.json
@@ -17,7 +17,7 @@
                 "title": "Account Types"
             },
             "description": "Description",
-            "definedByJBH": "Defined By JBH"
+            "byDefault": "By Default"
         }
     }
 }
