--- a/src/main/webapp/i18n/es/userGroupCategories.json
+++ b/src/main/webapp/i18n/es/userGroupCategories.json
@@ -16,8 +16,11 @@
             "detail": {
                 "title": "User Group Categories"
             },
-            "idUserGroup": "Id User Group",
-            "idCategory": "Id Category"
+            "name": "Name",
+            "createdAt": "Created At",
+            "updatedAt": "Updated At",
+            "userGroup": "User Group",
+            "category": "Category"
         }
     }
 }
